--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,5 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: |
+          pip install requests
           python bilibili_noproxy.py
