--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install requests
+      - name: Run
+        run: |          
           python bilibili_noproxy.py
